--- a/resources/sass/admin/partials/_navbar.scss
+++ b/resources/sass/admin/partials/_navbar.scss
@@ -15,7 +15,7 @@
 }
 
 .navbar-active-list {
-    @apply bg-primary p-2 pl-4 my-1 mx-2 rounded-lg;
+    @apply bg-primary-500 p-2 pl-4 my-1 mx-2 rounded-lg;
     a {
         i {
             @apply text-white;
