--- a/resources/sass/admin/partials/_input-group.scss
+++ b/resources/sass/admin/partials/_input-group.scss
@@ -60,3 +60,15 @@ select:focus,
 textarea:focus {
     @apply border-primary-300 ring ring-primary-200 ring-opacity-50;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
