Fixed generate command

--- a/resources/sass/admin/partials/_data-table.scss
+++ b/resources/sass/admin/partials/_data-table.scss
@@ -1,6 +1,6 @@
 .data-table {
     .bottom {
-        @apply align-middle inline-block min-w-full bg-white px-8 py-3 border rounded-bl-lg rounded-br-lg;
+        @apply align-middle inline-block min-w-full bg-white px-8 py-3 border rounded-lg;
         table {
             thead {
                 tr {
