--- a/resources/sass/admin/partials/_input-group.scss
+++ b/resources/sass/admin/partials/_input-group.scss
@@ -1,74 +1,74 @@
-.input-group {
-    @apply m-1 mb-3;
-    label {
-        @apply block font-medium text-sm text-gray-700 mb-2;
-    }
+// .input-group {
+//     @apply m-1 mb-3;
+//     label {
+//         @apply block font-medium text-sm text-gray-700 mb-2;
+//     }
 
-    input[type="text"],
-    input[type="file"],
-    input[type="email"],
-    input[type="password"],
-    input[type="datetime-local"],
-    input[type="date"],
-    input[type="number"],
-    select,
-    textarea {
-        @apply border-gray-300 rounded-md shadow-sm w-full;
-    }
+//     input[type="text"],
+//     input[type="file"],
+//     input[type="email"],
+//     input[type="password"],
+//     input[type="datetime-local"],
+//     input[type="date"],
+//     input[type="number"],
+//     select,
+//     textarea {
+//         @apply border-gray-300 rounded-md shadow-sm w-full;
+//     }
 
-    input[type="text"]:focus,
-    input[type="file"]:focus,
-    input[type="email"]:focus,
-    input[type="password"]:focus,
-    input[type="datetime-local"]:focus,
-    input[type="date"]:focus,
-    input[type="number"]:focus,
-    select:focus,
-    textarea:focus {
-        @apply border-primary-300 ring ring-primary-200 ring-opacity-50;
-    }
-}
+//     input[type="text"]:focus,
+//     input[type="file"]:focus,
+//     input[type="email"]:focus,
+//     input[type="password"]:focus,
+//     input[type="datetime-local"]:focus,
+//     input[type="date"]:focus,
+//     input[type="number"]:focus,
+//     select:focus,
+//     textarea:focus {
+//         @apply border-primary-300 ring ring-primary-200 ring-opacity-50;
+//     }
+// }
 
-.error-msg {
-    @apply text-red-500 text-sm italic;
-}
+// .error-msg {
+//     @apply text-red-500 text-sm italic;
+// }
 
-.success-msg {
-    @apply text-green-500 text-sm italic;
-}
+// .success-msg {
+//     @apply text-green-500 text-sm italic;
+// }
 
-input[type="text"],
-input[type="file"],
-input[type="email"],
-input[type="password"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="number"],
-select,
-textarea {
-    @apply border-gray-300 rounded-md shadow-sm;
-}
+// input[type="text"],
+// input[type="file"],
+// input[type="email"],
+// input[type="password"],
+// input[type="datetime-local"],
+// input[type="date"],
+// input[type="number"],
+// select,
+// textarea {
+//     @apply border-gray-300 rounded-md shadow-sm;
+// }
 
-input[type="text"]:focus,
-input[type="file"]:focus,
-input[type="email"]:focus,
-input[type="password"]:focus,
-input[type="datetime-local"]:focus,
-input[type="date"]:focus,
-input[type="number"]:focus,
-select:focus,
-textarea:focus {
-    @apply border-primary-300 ring ring-primary-200 ring-opacity-50;
-}
+// input[type="text"]:focus,
+// input[type="file"]:focus,
+// input[type="email"]:focus,
+// input[type="password"]:focus,
+// input[type="datetime-local"]:focus,
+// input[type="date"]:focus,
+// input[type="number"]:focus,
+// select:focus,
+// textarea:focus {
+//     @apply border-primary-300 ring ring-primary-200 ring-opacity-50;
+// }
 
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
+// /* Chrome, Safari, Edge, Opera */
+// input::-webkit-outer-spin-button,
+// input::-webkit-inner-spin-button {
+//   -webkit-appearance: none;
+//   margin: 0;
+// }
 
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
-}
+// /* Firefox */
+// input[type=number] {
+//   -moz-appearance: textfield;
+// }
