--- a/resources/sass/user/app.scss
+++ b/resources/sass/user/app.scss
@@ -22,6 +22,138 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.image-uploader-container {
+	padding: 1rem;
+	border: 1px rgba(209, 213, 219, 1) solid;
+}
+
+.image-uploader-container .image-uploader-no-image {
+	display: flex;
+	flex-direction: column;
+	color: rgba(156, 163, 175, 1);
+	padding: 1rem;
+	align-items: center;
+}
+
+.image-uploader-container .image-uploader-no-image .icon {
+	height: 4rem;
+	width: 4rem;
+	margin-bottom: 0.5rem;
+}
+
+.image-uploader-container .mb-4 {
+	margin-bottom: 1rem;
+}
+
+.image-uploader-container .image-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.image-uploader-container .image-wrapper img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+	overflow: hidden;
+}
+
+.image-uploader-container .image-wrapper .single-image {
+	width: 10rem;
+	height: 10rem;
+	position: relative;
+	border: 1px rgba(209, 213, 219, 1) solid;
+	border-radius: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	overflow: hidden;
+	background-color: rgba(255, 255, 255, var(1));
+}
+
+.image-uploader-container .image-wrapper .single-image > button {
+	position: absolute;
+	right: 0;
+	top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0.4rem 0.4rem;
+	border: 1px transparent solid;
+	cursor: pointer;
+	border-radius: 0.5rem;
+	background-color: #ebebeb;
+}
+
+.image-uploader-container .image-wrapper .single-image > button > .icon {
+	height: 1rem;
+	width: 1rem;
+	color: rgb(54, 54, 54);
+}
+
+.image-uploader-container .image-wrapper .single-image label {
+	position: absolute;
+	word-break: break-all;
+	bottom: 0;
+	left: 0;
+	border: 1px transparent solid;
+	border-top-right-radius: 0.5rem;
+	padding: 0.2rem 0.4rem;
+	background-color: rgba(0, 0, 0, 0.376);
+	color: white;
+	font-size: small;
+}
+
+.image-uploader-container .input-wrapper {
+	border: 1px rgba(107, 114, 128, 1) dashed;
+	position: relative;
+	margin-bottom: 0.5rem;
+	z-index: 1;
+}
+
+.image-uploader-container .input-wrapper input {
+	box-sizing: border-box;
+	cursor: pointer;
+	position: relative;
+	opacity: 0;
+	width: 100%;
+	height: 100%;
+	padding: 2rem;
+	z-index: 50;
+}
+
+.image-uploader-container .input-wrapper .drop-zone {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+}
+
+.image-uploader-container .input-wrapper .drop-zone .loading-spinner {
+	margin-left: 0.5rem;
+	animation: spin 1s linear infinite;
+	border-radius: 9999px;
+	height: 1.5rem;
+	width: 1.5rem;
+	border-top-width: 2px;
+	border-bottom-width: 2px;
+	border-color: rgba(0, 0, 0, 1);
+}
+
+.image-uploader-container .input-wrapper .drop-zone p {
+	color: rgba(156, 163, 175, 1);
+}
+
+.image-uploader-container .error-msg {
+	color: rgba(185, 28, 28, 1);
+}
+
+
 @tailwind components;
 @tailwind utilities;
 
